# KC1

./: .env  Cargo.toml  Central_AI_System.py  ST_AL.py  ST_GUI.py  ST_Ger_AL.py  ST_German_GUI.py  Synta.py  app.py  communication.py  record_passphrase.py  tele.py  tele_GUI.py  touch_voice_auth_launcher.py
Teleprompter-main/: Cargo.toml  Dioxus.toml
Teleprompter-main/assets/: main.css
Teleprompter-main/src/: main.rs
display_schedule/: Cargo.toml
display_schedule/src/: main.rs
scripts/: farewell.txt  porsche.txt  script_1744249241.txt  script_1744254880.txt  script_1744945552.txt  script_1745850747.txt
